# OpenPi0

./: .gitignore  README.md  pyproject.toml
scripts/: create_initial_pi0_gemma_ckpt.py  inference_pi0_gemma.py  pack_calvin_h5.py  train_pi0_gemma.py
src/open_pi0/: optimization.py
src/open_pi0/data/: calvin.py
src/open_pi0/models/pi0/: configuration_pi0.py  modeling_pi0.py
src/open_pi0/models/pi0_gemma/: __init__.py  configuration_pi0_gemma.py  modeling_pi0_gemma.py  processing_pi0_gemma.py
src/open_pi0/models/vision_encoder/: __init__.py  configuration_vision_encoder.py  modeling_vision_encoder.py
src/open_pi0/trainers/: pi0_trainer.py
src/open_pi0/utils/: ema.py
